--- a/newtry/package.json
+++ b/newtry/package.json
@@ -14,7 +14,6 @@
     "express-session": "^1.15.6",
     "mysql": "^2.16.0",
     "nodemailer": "^6.1.1",
-    "nunjucks": "^3.1.3",
-    "uuid": "^3.3.2"
+    "nunjucks": "^3.1.3"
   }
 }
